[package]
name = "api-use"
version = "0.1.0"
description = "API-USE desktop"
authors = ["api-use"]
edition = "2021"

[lib]
name = "api_use_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
url = "2"

